@@ -1,0 +1,20 @@
+#template_DATA = .directory Invoice.desktop ExpenseReport.desktop BalanceSheet.desktop PriceQuotation.desktop PackingSlip.desktop
+#templatedir = $(kde_datadir)/kspread/templates/Business
+
+#templatesrc_DATA = Invoice.kst ExpenseReport.kst BalanceSheet.kst PriceQuotation.kst PackingSlip.kst
+#templatesrcdir = $(kde_datadir)/kspread/templates/Business/.source
+
+#templateicons_DATA = Invoice.png ExpenseReport.png BalanceSheet.png PriceQuotation.png PackingSlip.png
+#templateiconsdir = $(kde_datadir)/kspread/templates/Business/.icon
+
+# ================================================================
+# Taken from kspread, originial above
+
+template_DATA = 
+templatedir = $(kde_datadir)/kchart/templates
+
+templatesrc_DATA = BarChart.chrt
+templatesrcdir = $(kde_datadir)/kchart/templates/.source
+
+templateicons_DATA = 
+templateiconsdir = $(kde_datadir)/kchart/templates/.icon
